--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"start": "node server.js"
+	
 		
 	},
 	"keywords": [],
